--- a/spells/освятить.md
+++ b/spells/освятить.md
@@ -1,41 +1,16 @@
+# Освятить
 
-Освятить
+|                         |                                                                                                                          | 
+| ----------------------- | ------------------------------------------------------------------------------------------------------------------------ |
+| Тип                     | Заклятие [Добро]                                                                                                         |
+| Уровень                 | Жр 2                                                                                                                     |
+| Компоненты              | В, С, М, БФ                                                                                                              |
+| Время Активации         | 1 стандартн. действ.                                                                                                     |
+| Диапазон                | Ближний (7,5 м+1,5 м/2 ур.)                                                                                              |
+| Зона                    | Излучение радиусом 6 м                                                                                                   |
+| Длительность            | 2 часа/уровень                                                                                                           |
+| Спасброски              | Нет                                                                                                                      |
+| Устойчивость к Магии    | Нет                                                                                                                      |
+| Материальные Компоненты | Пузырек святой воды и серебряная пыль стоимостью 25 зм. (2,25 кг) которые должны быть рассеяны вокруг выбранной области. |
 
-Заклятие [Добро]
-Уровень: Жр 2
-Компоненты: В, С, М, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Зона: Излучение радиусом 6 м
-Длительность: 2 часа/уровень
-Спасброски: Нет
-Устойчивость к Магии: Нет
-Это заклинание благословляет об-ласть
-позитивной энергией. Любая проверка
-
-параметра Обаяние сделанная для изгнания нежити, получает божественный бонус +3. Любая нежить вошедшая
-в зону действия заклинания, получает
-–1 штраф ко всем броскам атаки, повреждений и спасброскам. Нежить не
-может быть создана или призвана в
-освященной зоне заклинания.
-Если в освященной зоне заклинания
-расположен алтарь, святыня или какой
-либо другой постоянный элемент вашего божества, пантеона или просто сходной в мировоззрении силы, модификаторы, получаемые вами удваиваются
-(для вас +6 бонус обращения нежити,
-для нежити штраф –2). Вы не можете использовать данное заклинание на
-территории, где расположен подобный
-символ власти божества, помимо вашего.
-Если в зоне действия заклинания
-расположен алтарь, святыня или какой либо другой постоянный элемент
-другого божества, пантеона или силы
-превосходящей вашего покровителя,
-заклинание вместо того чтобы покрыть
-выбранную вами область, проклинает
-её, ограждает и лишает связи с окружающим пространством этот символ, связанный с божеством или другой силой.
-Если вы используете эту особенность
-заклинания, то бонусы и штрафы против нежити не будут работать, так как
-было описано ранее.
-Противоположным и контр-заклинанием для заклинания освятить является заклинание осквернить.
-Материальные Компоненты: Пузырек святой воды и серебряная пыль
-стоимостью 25 зм. (2,25 кг) которые
-должны быть рассеяны вокруг выбранной области.
+Это заклинание благословляет об-ласть позитивной энергией. Любая проверка параметра Обаяние сделанная для изгнания нежити, получает божественный бонус +3. Любая нежить вошедшая в зону действия заклинания, получает –1 штраф ко всем броскам атаки, повреждений и спасброскам. Нежить не может быть создана или призвана в освященной зоне заклинания. Если в освященной зоне заклинания расположен алтарь, святыня или какой либо другой постоянный элемент вашего божества, пантеона или просто сходной в мировоззрении силы, модификаторы, получаемые вами удваиваются (для вас +6 бонус обращения нежити, для нежити штраф –2). Вы не можете использовать данное заклинание на территории, где расположен подобный символ власти божества, помимо вашего. Если в зоне действия заклинания расположен алтарь, святыня или какой либо другой постоянный элемент другого божества, пантеона или силы превосходящей вашего покровителя, заклинание вместо того чтобы покрыть выбранную вами область, проклинает её, ограждает и лишает связи с окружающим пространством этот символ, связанный с божеством или другой силой. Если вы используете эту особенность заклинания, то бонусы и штрафы против нежити не будут работать, так как было описано ранее. Противоположным и контр-заклинанием для заклинания освятить является заклинание осквернить.
