--- a/spells/осквернить.md
+++ b/spells/осквернить.md
@@ -1,40 +1,16 @@
+# Осквернить
 
-Осквернить
+|                         |                                                                                                                                 |
+| ----------------------- | ------------------------------------------------------------------------------------------------------------------------------- |
+| Тип                     | Заклятие [Зло]                                                                                                                  |
+| Уровень                 | Жр 2, Зло 2                                                                                                                     |
+| Компоненты              | В, С, М, БФ                                                                                                                     |
+| Время Активации         | 1 стандартн. действ.                                                                                                            |
+| Диапазон                | Ближний (7,5 м +1,5 м/2 ур.)                                                                                                    | 
+| Зона                    | Излучение в радиусе 6 м                                                                                                         |
+| Длительность            | 2 часа/уровень                                                                                                                  |
+| Спасброски              | Нет                                                                                                                             |
+| Устойчивость к Магии    | Да                                                                                                                              |
+| Материальные Компоненты | Пузырек проклятой воды и серебряная пыль стоимостью 25 зм (2,25 кг.), которые должны быть разбрызганы вокруг требуемой области. |
 
-Заклятие [Зло]
-Уровень: Жр 2, Зло 2
-Компоненты: В, С, М, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м +1,5 м/2 ур.)
-Зона: Излучение в радиусе 6 м
-Длительность: 2 часа/уровень
-Спасброски: Нет
-Устойчивость к Магии: Да
-Это заклинание буквально насыщает
-область негативной энергией. Любые
-проверки параметра Обаяние на изгнание нежити будут терпеть штраф –3, а
-любая нежить в зоне действия заклинания осквернить получает +1 бонус на
-все броски атаки, повреждения, и спасброски. Любая нежить призванная или
-созданная в области действия эффектов
-заклинания получает +1 хит-поинт к
-каждому КХП.
-Если в территории действия заклинания осквернить имеется алтарь,
-гробница или другой постоянный символ вашего божества или союзной могущественной силы, то все эффекты
-заклинания удваиваются (–6 штраф на
-проверки обращения нежити, +2 бонус нечестивости и +2 хи-тпоинта на
-каждый КХП для нежити). Кроме того,
-любой кто применяет заклинание анимировать мертвого в этой зоне может
-создать удвоенное количество нежити
-(то есть по 4 КХП на уровень заклинателя вместо 2 КХП).
-Если область содержит алтарь, гробницу или другой постоянный пантеон
-
-божества или высшей силы противоположной вашему покровителю то заклинание осквернить вместо этого может
-проклясть данный источник власти, отрезая его тем самым от связи с соответствующим богом или силой. Эта дополнительная версия заклинания не дает
-никаких особых бонусов и штрафов
-для нежити, как было описано ранее.
-Контр-заклинание и рассеивающим
-заклинанием заклинание осквернить
-является освятить.
-Материальные Компоненты: Пузырек проклятой воды и серебряная пыль
-стоимостью 25 зм (2,25 кг.), которые
-должны быть разбрызганы вокруг требуемой области.
+ Это заклинание буквально насыщает область негативной энергией. Любые проверки параметра Обаяние на изгнание нежити будут терпеть штраф –3, а любая нежить в зоне действия заклинания осквернить получает +1 бонус на все броски атаки, повреждения, и спасброски. Любая нежить призванная или созданная в области действия эффектов заклинания получает +1 хит-поинт к каждому КХП. Если в территории действия заклинания осквернить имеется алтарь, гробница или другой постоянный символ вашего божества или союзной могущественной силы, то все эффекты заклинания удваиваются (–6 штраф на проверки обращения нежити, +2 бонус нечестивости и +2 хи-тпоинта на каждый КХП для нежити). Кроме того, любой кто применяет заклинание анимировать мертвого в этой зоне может создать удвоенное количество нежити (то есть по 4 КХП на уровень заклинателя вместо 2 КХП). Если область содержит алтарь, гробницу или другой постоянный пантеон божества или высшей силы противоположной вашему покровителю то заклинание осквернить вместо этого может проклясть данный источник власти, отрезая его тем самым от связи с соответствующим богом или силой. Эта дополнительная версия заклинания не дает никаких особых бонусов и штрафов для нежити, как было описано ранее. Контр-заклинание и рассеивающим заклинанием заклинание осквернить является освятить.
