--- a/spells/ослабляющий-луч.md
+++ b/spells/ослабляющий-луч.md
@@ -1,17 +1,14 @@
+# Ослабляющий Луч
+|                      |                             |
+| -------------------- | --------------------------- |
+| Тип                  | Некромантия                 |
+| Уровень              | Маг/Чар 1                   |
+| Компоненты           | В, С                        |
+| Время Активации      | 1 стандартн. действ.        |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.) |
+| Эффект               | Луч                         |
+| Длительность         | 1 минута/уровень            |
+| Спасбросок           | Нет                         |
+| Устойчивость к Магии | Да                          |
 
-Ослабляющий Луч
-
-Некромантия
-Уровень: Маг/Чар 1
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Эффект: Луч
-Длительность: 1 минута/уровень
-Спасбросок: Нет
-Устойчивость к Магии: Да
-Сверкающий луч вырывается из вашей
-ладони. Вы должны провести успешную касательную стрелковую атаку,
-чтобы поразить цель. Субъект переносит штраф к Силе 1d6+1 за 2 уровня
-заклинателя (максимум 1d6+5). Сила
-субъекта не может упасть ниже 1.
+Сверкающий луч вырывается из вашей ладони. Вы должны провести успешную касательную стрелковую атаку, чтобы поразить цель. Субъект переносит штраф к Силе 1d6+1 за 2 уровня заклинателя (максимум 1d6+5). Сила субъекта не может упасть ниже 1.
