--- a/spells/остановка-времени.md
+++ b/spells/остановка-времени.md
@@ -1,40 +1,13 @@
+# Остановка Времени
 
-Остановка Времени
+|                 |                                            |
+| --------------- | ------------------------------------------ |
+| Тип             | Превращение                                |
+| Уровень         | Чар/Маг 9, Мошенничество 9                 |
+| Компоненты      | В                                          |
+| Время Активации | 1 стандартн. действ.                       |
+| Диапазон        | Лично                                      |
+| Цель            | Вы                                         |
+| Длительность    | 1d4+1 (реального  времени); смотрите текст |
 
-Превращение
-Уровень: Чар/Маг 9, Мошенничество 9
-Компоненты: В
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: 1d4+1 (реального
-времени); смотрите текст
-Это заклинание заставляет само время остановится для всех кроме вас
-самого. На самом деле вы просто начинаете двигаться настолько быстро,
-что все остальное кажется вам как бы
-
-замороженным, хотя все остальные существа продолжают двигаться со своей
-обычной скоростью. На 1d4+1 раундов
-в течение которых происходит замедление времени, вы можете делать все что
-угодно. Обычный и магический огонь,
-холод, газ и другие подобные явления
-все еще продолжают действовать на
-вас. Во время действия заклинания, все
-другие существа неуязвимы для ваших
-атак или заклинаний; вы не можете атаковать заклинаниями других существ.
-Однако заклинания действующие на
-область и длительность которых превышает длительность заклинания остановка времени (например убийственное
-облако), срабатывают как обычно сразу
-после завершения действия эффектов
-заклинания остановка времени. Большинство заклинателей используют это
-дополнительное время, для того чтобы
-построить свою защиту, призвать соратников или для того чтобы убежать
-от сражения.
-Вы не можете передвинуть или повредить предметы удерживаемые или
-надетые существами, двигающимся в
-нормальном времени, однако вы можете
-влиять на любые предметы которые не
-находятся в чьем либо распоряжении.
-Пока заклинание длится, вы стано-витесь неопределяемым для всех
-остальных. Вы не можете войти на территорию защищенную полем антимагии находясь под эффектом остановки
-времени.
+  Это заклинание заставляет само время остановится для всех кроме вас самого. На самом деле вы просто начинаете двигаться настолько быстро, что все остальное кажется вам как бы замороженным, хотя все остальные существа продолжают двигаться со своей обычной скоростью. На 1d4+1 раундов в течение которых происходит замедление времени, вы можете делать все что угодно. Обычный и магический огонь, холод, газ и другие подобные явления все еще продолжают действовать на вас. Во время действия заклинания, все другие существа неуязвимы для ваших атак или заклинаний; вы не можете атаковать заклинаниями других существ. Однако заклинания действующие на область и длительность которых превышает длительность заклинания остановка времени (например убийственное облако), срабатывают как обычно сразу после завершения действия эффектов заклинания остановка времени. Большинство заклинателей используют это дополнительное время, для того чтобы построить свою защиту, призвать соратников или для того чтобы убежать от сражения. Вы не можете передвинуть или повредить предметы удерживаемые или надетые существами, двигающимся в нормальном времени, однако вы можете влиять на любые предметы которые не находятся в чьем либо распоряжении. Пока заклинание длится, вы стано-витесь неопределяемым для всех остальных. Вы не можете войти на территорию защищенную полем антимагии находясь под эффектом остановки времени.
