--- a/spells/отогнать-насекомых.md
+++ b/spells/отогнать-насекомых.md
@@ -1,20 +1,15 @@
+# Отогнать Насекомых
 
-Отогнать Насекомых
+|                      |                                            |
+| -------------------- | ------------------------------------------ |
+| Тип                  | Защита                                     |
+| Уровень              | Брд 4, Дрд 4, Жр 4, Рджр 3                 |
+| Компоненты           | В, С, БФ                                   |
+| Время Активации      | 1 стандартн. действ.                       |
+| Диапазон             | 3 м                                        |
+| Зона                 | Излучение с радиусом 3 м и центром на вас. |
+| Длительность         | 10 мин./уровень (П)                        |
+| Спасбросок           | Нет или Воля нейтрализует; смотрите текст  |
+| Устойчивость к Магии | Да                                         |
 
-Защита
-Уровень: Брд 4, Дрд 4, Жр 4, Рджр 3
-Компоненты: В, С, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: 3 м
-Зона: Излучение с радиусом 3 м и
-центром на вас.
-Длительность: 10 мин./уровень (П)
-Спасбросок: Нет или Воля нейтрализует;
-смотрите текст
-Устойчивость к Магии: Да
-Невидимый барьер сдерживает насекомых. Насекомые с КХП меньшим, чем
-1/3 от вашего уровня, не могут пересечь его. Насекомые с КХП равным 1/3
-вашего уровня и более могут пересечь
-барьер при успешном спасброске Воли.
-Даже в этом случае пересечение барьера причиняет насекомым 2d6 повреждения, а его давление вызывает боль и
-сдерживает большинство из них.
+ Невидимый барьер сдерживает насекомых. Насекомые с КХП меньшим, чем 1/3 от вашего уровня, не могут пересечь его. Насекомые с КХП равным 1/3 вашего уровня и более могут пересечь барьер при успешном спасброске Воли. Даже в этом случае пересечение барьера причиняет насекомым 2d6 повреждения, а его давление вызывает боль и сдерживает большинство из них.
