--- a/spells/отражение-заклинаний.md
+++ b/spells/отражение-заклинаний.md
@@ -1,73 +1,24 @@
+# Отражение Заклинаний
 
-Отражение Заклинаний
+|                                  |                                                       |
+| -------------------------------- | ----------------------------------------------------- |
+| Тип                              | Защита                                                |
+| Уровень                          | Магия 7, Чар/Маг 7, Удача 7                           |
+| Компоненты                       | В, С, М/БФ                                            |
+| Время Активации                  | 1 стандартн. действ.                                  |
+| Диапазон                         | Лично                                                 |
+| Цель                             | Вы                                                    |
+| Длительность                     | Пока не будет истрачено или в течении 10 мин./уровень |
+| Волшебный Материальный Компонент | Небольшое серебряное зеркальце.                       |
 
-Защита
-Уровень: Магия 7, Чар/Маг 7, Удача 7
-Компоненты: В, С, М/БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: Пока не будет истрачено
-или в течении 10 мин./уровень
-Заклинание или магические эффекты
-направленные на вас возвращаются на
-того кто направил эти заклинания против вас. Школа защиты позволяет обратить только те заклинания кото-рые
-были нацелены лично на вас. И поэтому заклинания, нацеленные на определенную зону не могут быть отражены
-обратно. Отражение заклинаний также
-не эффективно против заклинаний с касательным диапазоном. Таким образом,
-заклинание очаровать направленное
-против вас, может быть обращено на
-исходного заклинателя, и даже дать вам
-возможность очаровать его, если тот
-поддастся эффектам заклинания очаровать, и в тоже время огненный шар не
-сможет быть отражен, как и причинить
-критические ранения.
-От 7-и до 10-и (1d4+6) уровней заклинаний подвергаются эффекту обращения. МП в тайне определяет точное
+ Заклинание или магические эффекты направленные на вас возвращаются на того кто направил эти заклинания против вас. Школа защиты позволяет обратить только те заклинания кото-рые были нацелены лично на вас. И поэтому заклинания, нацеленные на определенную зону не могут быть отражены обратно. Отражение заклинаний также не эффективно против заклинаний с касательным диапазоном. Таким образом, заклинание очаровать направленное против вас, может быть обращено на исходного заклинателя, и даже дать вам возможность очаровать его, если тот поддастся эффектам заклинания очаровать, и в тоже время огненный шар не сможет быть отражен, как и причинить критические ранения. От 7-и до 10-и (1d4+6) уровней заклинаний подвергаются эффекту обращения. МП в тайне определяет точное  число. После того как заклинание было обращено, МП вычитает количество обращенных заклинаний из общего числа оставшихся уровней. Когда вы находится по поражением заклинания более высокого уровня, чем осталось у вашего отражения заклинаний, заклинание лишь частично обращается. МП высчитывает количество обращенных уровней из уровня поразившего заклинания, затем делит полученный результат на уровень заклинания, чтобы видеть долю поражения этим заклинанием. Для повреждающих заклинаний вы и заклинатель переносите по частичным долям заклинания. Для не повреждающих заклинаний для каждого из вас существует процентный шанс попадания под эффект. Например, если у вас осталось три уровня обращения заклинаний, и будете атакованы заклинанием 4-го уровня повышенная магическая стрел, вы обратите 3/4 эффекта от заклинания обратно на заклинателя. Вы можете получить 1/4 часть повреждений, в то время как заклинатель получает 3/4 от повреждения. Если в той же ситуации вы были атакованы заклинанием страх (также 4-го уровня), то шанс на то, что вы подвергнитесь его эффектам равен 25%, в то время как шанс поддаться заклинанию страх у самого заклинателя будет 75%. Если и вы и заклинатель находитесь под воздействием эффекта от заклинания обращение заклинаний то в этом случае создается резонирующее поле. В подобном случае производится случайный бросок на d%   
 
-число. После того как заклинание было
-обращено, МП вычитает количество
-обращенных заклинаний из общего
-числа оставшихся уровней.
-Когда вы находится по поражением
-заклинания более высокого уровня, чем
-осталось у вашего отражения заклинаний, заклинание лишь частично обращается. МП высчитывает количество
-обращенных уровней из уровня поразившего заклинания, затем делит полученный результат на уровень заклинания, чтобы видеть долю поражения
-этим заклинанием. Для повреждающих
-заклинаний вы и заклинатель переносите по частичным долям заклинания.
-Для не повреждающих заклинаний для
-каждого из вас существует процентный
-шанс попадания под эффект.
-Например, если у вас осталось три
-уровня обращения заклинаний, и будете атакованы заклинанием 4-го уровня
-повышенная магическая стрел, вы обратите 3/4 эффекта от заклинания обратно на заклинателя. Вы можете получить 1/4 часть повреждений, в то
-время как заклинатель получает 3/4 от
-повреждения. Если в той же ситуации
-вы были атакованы заклинанием страх
-(также 4-го уровня), то шанс на то, что
-вы подвергнитесь его эффектам равен
-25%, в то время как шанс поддаться заклинанию страх у самого заклинателя
-будет 75%.
-Если и вы и заклинатель находитесь
-под воздействием эффекта от заклинания обращение заклинаний то в этом
-случае создается резонирующее поле.
-В подобном случае производится случайный бросок на d%
 
-d%
-01-70
+| d%     | Эффект                                                                            |
+| ------ | --------------------------------------------------------------------------------- |
+| 01-70  | Заклинание проходит впустую                                                       |
+| 71-80  | Заклинание действует на вас обоих в полную силу                                   |
+| 81-97  | Оба эффекта обращения заклинаний не функционирует в течение 1d4 минуты            |
+| 98-100 | Оба заклинателя попадают межпространственную трещину и переносятся на другой план | 
 
-Эффект
-Заклинание проходит
-впустую
-71-80 Заклинание действует на вас
-обоих в полную силу
-81-97 Оба эффекта обращения
-заклинаний не
-функционирует в течение
-1d4 минуты
-98-100 Оба заклинателя попадают
-межпространственную
-трещину и переносятся на
-другой план
 
-Волшебный Материальный Компонент:
-Небольшое серебряное зеркальце.
