--- a/spells/отталкивание.md
+++ b/spells/отталкивание.md
@@ -1,34 +1,16 @@
+# Отталкивание
 
-Отталкивание
+|                         |                                                                                                                                       |
+| ----------------------- | ------------------------------------------------------------------------------------------------------------------------------------- |
+| Тип                     | Защита                                                                                                                                |
+| Уровень                 | Жр 7, Защита 7, Маг/Чар 6                                                                                                             |
+| Компоненты              | В, С, Ф/БФ                                                                                                                            |
+| Время Активации         | 1 стандартн. действ.                                                                                                                  |
+| Диапазон                | До 3-х м/уровень                                                                                                                      |
+| Зона                    | Излучение радиусом до 3-х м/уровень с центром на вас                                                                                  |
+| Длительность            | 1 раунд/уровень (П)                                                                                                                   |
+| Спасбросок              | Воля нейтрализует                                                                                                                     |
+| Устойчивость к Магии    | Да                                                                                                                                    |
+| Волшебное Фокусирование | Пара маленьких железных прутьев, прикрепленные к двум маленьким фигуркам собак, одной черной, а другой белой, общей стоимостью 50 зм. |
 
-Защита
-Уровень: Жр 7, Защита 7, Маг/Чар 6
-Компоненты: В, С, Ф/БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: До 3-х м/уровень
-Зона: Излучение радиусом до 3-х м/
-уровень с центром на вас
-Длительность: 1 раунд/уровень (П)
-Спасбросок: Воля нейтрализует
-Устойчивость к Магии: Да
-Невидимое, подвижное поле окружает
-вас и не дает существам приблизиться
-к вам. Вы решаете, насколько большим будет это поле во время активации заклинания (в пределах, которых
-позволяет ваш уровень). Любое существо внутри поля или входящее в него
-должно сделать спасбросок. Если он
-неудачен, то оно не может подойти к
-вам на время длительности заклинания.
-Действия оттолкнутых существ ничем
-другим не ограничены. Они могут сражаться с другими, а также активировать
-
-заклинания или атаковать вас стрелковым оружием. Если вы подходите к
-существу, то ничего не происходит (это
-существо не отталкивается). Существо
-свободно может атаковать вас в ближнем бою, если вы подошли в пределы
-его досягаемости. Если оттолкнутое существо отходит от вас а затем пытается
-подойти, оно все равно не сможет этого
-сделать, пока находится в зоне поражения заклинания.
-Волшебное Фокусирование: Пара
-маленьких железных прутьев, прикрепленные к двум маленьким фигуркам
-собак, одной черной, а другой белой,
-общей стоимостью 50 зм.
+ Невидимое, подвижное поле окружает вас и не дает существам приблизиться к вам. Вы решаете, насколько большим будет это поле во время активации заклинания (в пределах, которых позволяет ваш уровень). Любое существо внутри поля или входящее в него должно сделать спасбросок. Если он неудачен, то оно не может подойти к вам на время длительности заклинания. Действия оттолкнутых существ ничем другим не ограничены. Они могут сражаться с другими, а также активировать заклинания или атаковать вас стрелковым оружием. Если вы подходите к существу, то ничего не происходит (это существо не отталкивается). Существо свободно может атаковать вас в ближнем бою, если вы подошли в пределы его досягаемости. Если оттолкнутое существо отходит от вас а затем пытается подойти, оно все равно не сможет этого сделать, пока находится в зоне поражения заклинания. 
