--- a/spells/очаровать-животное.md
+++ b/spells/очаровать-животное.md
@@ -1,12 +1,9 @@
+# Очаровать Животное
 
-Очаровать Животное
+|         |                                           |
+| ------- | ----------------------------------------- |
+| Тип     | Очарование (Чары) [Воздействует на разум] |
+| Уровень | Дрд 1, Рджр 1                             |
+| Цель    | Одно животное                             |
 
-Очарование (Чары) [Воздействует на
-разум]
-Уровень: Дрд 1, Рджр 1
-Цель: Одно животное
-Это заклинание функционирует как
-заклинание очаровать персону, за исключением того, что оно воздействует
-на животных. Смотрите Справочник
-Монстров для большей информации по
-типам существ.
+ Это заклинание функционирует как заклинание очаровать персону, за исключением того, что оно воздействует на животных. Смотрите Справочник Монстров для большей информации по типам существ.
