--- a/spells/очаровать-персону.md
+++ b/spells/очаровать-персону.md
@@ -1,44 +1,15 @@
+# Очаровать Персону
 
-Очаровать Персону
+|                      |                                                 |
+| -------------------- | ----------------------------------------------- |
+| Тип                  | Очарование (Очарование) [Воздействует на разум] |
+| Уровень              | Брд 1, Чар/Маг 1                                |
+| Компоненты           | В, С                                            |
+| Время Активации      | 1 стандартн. действ.                            |
+| Диапазон             | Ближний (7,5 м +1,5 м/2 ур.)                    |
+| Цель                 | Одно гуманоидное существо                       |
+| Длительность         | 1 час/уровень                                   |
+| Спасбросок           | Воля Нейтрализует                               |
+| Устойчивость к Магии | Да                                              |
 
-Очарование (Очарование) [Воздействует
-на разум]
-Уровень: Брд 1, Чар/Маг 1
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м +1,5 м/2 ур.)
-Цель: Одно гуманоидное существо
-Длительность: 1 час/уровень
-Спасбросок: Воля Нейтрализует
-Устойчивость к Магии: Да
-Это заклинание заставляет любое гуманоидное существо относится к вам
-как к своему лучшему другу и союзнику (при условии, что ваше отношение
-тоже будет оставаться дружественным;
-смотрите влияние на отношение НИП
-на стр. 71). Если существо уже было
-атаковано вами или вашими союзниками, то оно имеет бонус к спасброску
-против заклинания +5.
-Заклинание не дает вам возможности
-управлять очарованным существом,
-как если бы оно было роботом, однако
-очарованный будет внимателен к вашим словам и действиям. Вы можете
-попытаться отдать ему приказ, но для
-этого вы должны пройти противоположную проверку Обаяния, для того
-чтобы заставить существо делать то,
-что в обычной ситуации оно делать не
-станет. (Повторные попытки не разрешены ). Существо, находящееся под
-действием этого заклинания никогда
-не станет выполнять самоубийственные или очевидно губительные приказы. Однако если вы, например, попросите очарованного воина задержать
-красного дракона всего «на несколько
-секунд», поскольку это единственный
-возможный шанс спасти вашу жизнь, то
-он вполне может поверить вам и отправится на верную смерть. Любые ваши
-действия или действия вашей партии,
-которые каким либо образом могут
-быть восприняты как угрожающие по
-отношению к очарованному существу,
-разрушают заклинание. Для того чтобы
-отдавать приказы, вы должны говорить
-на языке которым владеет цель или же
-применить доступную для понимания
-пантомиму.
+ Это заклинание заставляет любое гуманоидное существо относится к вам как к своему лучшему другу и союзнику (при условии, что ваше отношение тоже будет оставаться дружественным; смотрите влияние на отношение НИП на стр. 71). Если существо уже было атаковано вами или вашими союзниками, то оно имеет бонус к спасброску против заклинания +5. Заклинание не дает вам возможности управлять очарованным существом, как если бы оно было роботом, однако очарованный будет внимателен к вашим словам и действиям. Вы можете попытаться отдать ему приказ, но для этого вы должны пройти противоположную проверку Обаяния, для того чтобы заставить существо делать то, что в обычной ситуации оно делать не станет. (Повторные попытки не разрешены ). Существо, находящееся под действием этого заклинания никогда не станет выполнять самоубийственные или очевидно губительные приказы. Однако если вы, например, попросите очарованного воина задержать красного дракона всего «на несколько секунд», поскольку это единственный возможный шанс спасти вашу жизнь, то он вполне может поверить вам и отправится на верную смерть. Любые ваши действия или действия вашей партии, которые каким либо образом могут быть восприняты как угрожающие по отношению к очарованному существу, разрушают заклинание. Для того чтобы отдавать приказы, вы должны говорить на языке которым владеет цель или же применить доступную для понимания пантомиму.
