--- a/spells/очищение-невидимости.md
+++ b/spells/очищение-невидимости.md
@@ -1,14 +1,13 @@
+# Очищение Невидимости
 
-Очищение Невидимости
+|                 |                      | 
+| --------------- | -------------------- |
+| Тип             | Защита               |
+| Уровень         | Жр 3                 |
+| Компоненты      | В, С                 |
+| Время Активации | 1 стандартн. действ. |
+| Диапазон        | Лично                |
+| Цель            | Вы                   |
+| Длительность    | 1 минута/уровень (П) |
 
-Защита
-Уровень: Жр 3
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Лично
-Цель: Вы
-Длительность: 1 минута/уровень (П)
-
-Вы окружаете себя сферой силы радиусом 1,5 метра/уровень заклина-теля, которое снимает все формы невидимости.
-Все невидимое ста-новится видимым,
-попадая в зону поражения заклинания.
+ Вы окружаете себя сферой силы радиусом 1,5 метра/уровень заклинателя, которое снимает все формы невидимости. Все невидимое становится видимым, попадая в зону поражения заклинания.
