--- a/spells/падение-как-перо.md
+++ b/spells/падение-как-перо.md
@@ -1,51 +1,15 @@
+# Падение как Перо
 
-Падение как Перо
+|                      |                                                                                                            |
+| -------------------- | ---------------------------------------------------------------------------------------------------------- |
+| Тип                  | Превращение                                                                                                |
+| Уровень              | Брд 1, Маг/Чар 1                                                                                           |
+| Компоненты           | В                                                                                                          |
+| Время Активации      | 1 свободное действие                                                                                       |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.)                                                                                |
+| Цель                 | 1 среднее или более мелкое падающее существо/уровень, между двумя из которых должно быть не более 6 метров |
+| Длительность         | Пока не приземлится, или 1 раунд/уровень                                                                   |
+| Спасбросок           | Воля нейтрализует (безвредно) или Воля нейтрализует (объект)                                               |
+| Устойчивость к Магии | Да (объект)                                                                                                |
 
-Превращение
-Уровень: Брд 1, Маг/Чар 1
-Компоненты: В
-Время Активации: 1 свободное
-действие
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Цель: 1 среднее или более мелкое
-падающее существо/уровень, между
-двумя из которых должно быть не более
-6 метров
-Длительность: Пока не приземлится,
-или 1 раунд/уровень
-Спасбросок: Воля нейтрализует
-(безвредно) или Воля нейтрализует
-(объект)
-Устойчивость к Магии: Да (объект)
-Попадающие под эффект существа или
-объекты падают замедленно, хотя более
-быстрее, чем падают обычные перья.
-Падение как перо мгновенно скорость
-падения существа примерно до 18 м в
-раунд (эквивалент к падению с высоты
-около метра), и при приземлении субъ-
-
-екты не переносят повреждений, если
-заклинание до сих пор в действии. Однако как только время действия заклинания оканчивается, скорость падения
-восстанавливается.
-Если заклинание действует на одно
-или больше Средних или более мелких
-существ (включая снаряжение и переносимые объекты у каждого из существ
-до максимальной нагрузки) или объектов, или эквивалента в более крупных
-существ: Большие существа или объекты принимаются как два Средних существа или объекта, Огромное принимается как два Больших существа или
-объект, и т.д.
-Вы способны применить это заклинание как мгновенное (свободным действием), достаточно быстро, чтобы спасти себя, если вы вдруг упали. Время
-активации свободное действие, наподобие применения ускоренного заклинания, и оно учитывается в ограничение
-применения одного ускоренного заклинания в раунд. Вы можете применять
-это заклинание даже не в свой ход.
-Это заклинание не оказывает особого эффекта на стрелковое оружие,
-если только оно не падает с какого-то
-расстояния. Если заклинание сактивировано на падающий предмет, такой
-как булыжник сброшенный сверху со
-стены замка, объект наносит лишь половину повреждений, в зависимости
-от его веса, без бонуса за высоту, с которой он был сброшен. (Для дополнительной информации о падающих объектах смотрите Руководство Мастера
-Подземелий).
-Падение как перо действует лишь
-на свободно падающие объекты. Оно
-никак не реагирует на удар мечом проведенный с размаху, или стремительно
-несущееся или летящее существо.
+  Попадающие под эффект существа или объекты падают замедленно, хотя более быстрее, чем падают обычные перья. Падение как перо мгновенно скорость падения существа примерно до 18 м в раунд (эквивалент к падению с высоты около метра), и при приземлении субъекты не переносят повреждений, если заклинание до сих пор в действии. Однако как только время действия заклинания оканчивается, скорость падения восстанавливается. Если заклинание действует на одно или больше Средних или более мелких существ (включая снаряжение и переносимые объекты у каждого из существ до максимальной нагрузки) или объектов, или эквивалента в более крупных существ: Большие существа или объекты принимаются как два Средних существа или объекта, Огромное принимается как два Больших существа или объект, и т.д. Вы способны применить это заклинание как мгновенное (свободным действием), достаточно быстро, чтобы спасти себя, если вы вдруг упали. Время активации свободное действие, наподобие применения ускоренного заклинания, и оно учитывается в ограничение применения одного ускоренного заклинания в раунд. Вы можете применять это заклинание даже не в свой ход. Это заклинание не оказывает особого эффекта на стрелковое оружие, если только оно не падает с какого-то расстояния. Если заклинание сактивировано на падающий предмет, такой как булыжник сброшенный сверху со стены замка, объект наносит лишь половину повреждений, в зависимости от его веса, без бонуса за высоту, с которой он был сброшен. (Для дополнительной информации о падающих объектах смотрите Руководство Мастера Подземелий). Падение как перо действует лишь на свободно падающие объекты. Оно никак не реагирует на удар мечом проведенный с размаху, или стремительно несущееся или летящее существо.
