--- a/spells/палец-смерти.md
+++ b/spells/палец-смерти.md
@@ -1,19 +1,15 @@
+# Палец Смерти
 
-Палец Смерти
+|                      |                                | 
+| -------------------- | ------------------------------ |
+| Тип                  | Некромантия [Смерть]           |
+| Уровень              | Дрд 8, Маг/Чар 7               |
+| Компоненты           | В, С                           |
+| Время Активации      | 1 стандартн. действ.           |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 уровня) |
+| Цель                 | Одно живое существо            |
+| Длительность         | Мгновенно                      |
+| Спасбросок           | Стойкость частично             |
+| Устойчивость к Магии | Да                             |
 
-Некромантия [Смерть]
-Уровень: Дрд 8, Маг/Чар 7
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2
-уровня)
-Цель: Одно живое существо
-Длительность: Мгновенно
-Спасбросок: Стойкость частично
-Устойчивость к Магии: Да
-В пределах диапазона заклинания вы
-способны уничтожить одно живое существо. Цели разрешено пройти проверку Стойкости, чтобы получить возможность выжить во время атаки. Если
-спасбросок успешен, то вместо этого
-существо переносит 3d6 пунктов повреждений и +1 за каждый уровень заклинателя (максимум +25). Даже если
-субъект успешно прошел проверку
-спасброска, он может умереть от перенесенных повреждений.
+ В пределах диапазона заклинания вы способны уничтожить одно живое существо. Цели разрешено пройти проверку Стойкости, чтобы получить возможность выжить во время атаки. Если спасбросок успешен, то вместо этого существо переносит 3d6 пунктов повреждений и +1 за каждый уровень заклинателя (максимум +25). Даже если субъект успешно прошел проверку спасброска, он может умереть от перенесенных повреждений.
