--- a/spells/парящий-диск-тенсера.md
+++ b/spells/парящий-диск-тенсера.md
@@ -1,34 +1,16 @@
+# Парящий Диск Тенсера
 
-Парящий Диск Тенсера
+|                         |                                             | 
+| ----------------------- | ------------------------------------------- |
+| Тип                     | Заклятие [Сила]                             |
+| Уровень                 | Чар/Маг 1                                   |
+| Компоненты              | В, С, М                                     |
+| Время Активации         | 1 стандартн. действ.                        |
+| Диапазон                | Ближний (7,5 м+1,5 м/2 ур.)                 |
+| Эффекты                 | Диск состоящий из энергии диаметром в 0,9 м |
+| Длительность            | 1 час/уровень                               |
+| Спасбросок              | Нет                                         |
+| Устойчивость к Магии    | Нет                                         |
+| Материальные Компоненты | Капля ртути.                                |
 
-Заклятие [Сила]
-Уровень: Чар/Маг 1
-Компоненты: В, С, М
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Эффекты: Диск состоящий из энергии
-диаметром в 0,9 м
-Длительность: 1 час/уровень
-Спасбросок: Нет
-Устойчивость к Магии: Нет
-
-Вы создаете слегка искривленный
-круглый диск из силы, который плывет рядом с вами и может помогать вам
-переносить ваше снаряжение. Диск
-составляет 0,9 м в диаметре и имеет
-углубление в центре равное 2,5 см. Он
-может переносить 45 кг. за уровень заклинателя. (При транспортировке жидкости емкость диска составляет 9 литров). Диск парит примерно в 0,9 м от
-поверхности все время действия заклинания. Он парит в горизонтальном направлении не выходя за максимального
-зону действия заклинания и перемещается со скоростью равной обычной скорости заклинателя. Если диск не имеет
-определенного направления, то он просто зависает в 1,5 метрах от вас и поддерживает это расстояние. Диск перестает функционировать после того, как
-время действия заклинания закончится.
-Диск также исчезает, если вы выйдете
-за зону действия заклинания (например
-начав двигаться слишком быстро) или
-попытаетесь заставить диск подняться
-выше чем 0,9 м от поверхности. После
-того как диск исчезнет все что было в
-нем упадет на поверхность, которая
-располагалась под ним.
-Материальные Компоненты: Капля
-ртути.
+ Вы создаете слегка искривленный круглый диск из силы, который плывет рядом с вами и может помогать вам переносить ваше снаряжение. Диск составляет 0,9 м в диаметре и имеет углубление в центре равное 2,5 см. Он может переносить 45 кг. за уровень заклинателя. (При транспортировке жидкости емкость диска составляет 9 литров). Диск парит примерно в 0,9 м от поверхности все время действия заклинания. Он парит в горизонтальном направлении не выходя за максимального зону действия заклинания и перемещается со скоростью равной обычной скорости заклинателя. Если диск не имеет определенного направления, то он просто зависает в 1,5 метрах от вас и поддерживает это расстояние. Диск перестает функционировать после того, как время действия заклинания закончится. Диск также исчезает, если вы выйдете за зону действия заклинания (например начав двигаться слишком быстро) или попытаетесь заставить диск подняться выше чем 0,9 м от поверхности. После того как диск исчезнет все что было в нем упадет на поверхность, которая располагалась под ним. 
