--- a/spells/планарная-привязка.md
+++ b/spells/планарная-привязка.md
@@ -1,107 +1,10 @@
+# Планарная Привязка
 
-Планарная Привязка
+|            |                                                                                                                                                                                                                                                                                                                                                                                                                      |
+| ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Тип        | Колдовство (Призыв) [смотрите текст ограниченной планарной привязки]                                                                                                                                                                                                                                                                                                                                                 |
+| Уровень    | Маг/Чар 6                                                                                                                                                                                                                                                                                                                                                                                                            |
+| Компоненты | В, С                                                                                                                                                                                                                                                                                                                                                                                                                 |
+| Цель       | До 3-х призванных элементалей или внешних общим КХП не более 12, которые появляются на расстоянии не более 9 метров друг от друга Заклинание работает как ограниченная планарная привязка, но вы можете призвать одно существо с КХП 12 и меньше, или нескольких (2 или 3) существ одного вида с общим КХП до 12. Каждое существо получает спасбросок, попытается сбежать, и каждое нужно отдельно уговорить помочь. |
 
-Колдовство (Призыв) [смотрите текст
-ограниченной планарной привязки]
-Уровень: Маг/Чар 6
-Компоненты: В, С
-Цель: До 3-х призванных элементалей
-или внешних общим КХП не более 12,
-которые появляются на расстоянии не
-более 9 метров друг от друга
-Заклинание работает как ограниченная
-планарная привязка, но вы можете призвать одно существо с КХП 12 и меньше, или нескольких (2 или 3) существ
-одного вида с общим КХП до 12. Каждое существо получает спасбросок, попытается сбежать, и каждое нужно отдельно уговорить помочь.
-
-Планарная Привязка,
-Неограниченная
-
-Колдовство (Призыв) [смотрите текст
-ограниченной планарной привязки]
-Уровень: Маг/Чар 8
-Компоненты: В, С
-Цель: До 3-х призванных элементалей
-или внешних общим КХП не более 18,
-которые появляются на расстоянии не
-более 9 метров друг от друга
-Заклинание работает как ограниченная
-планарная привязка, но вы можете призвать одно существо с КХП до 18 или
-меньше, или нескольких (2 или 3) существ одного вида с общим КХП не более 18. Каждое существо получает спасбросок, попытается сбежать, и каждое
-нужно отдельно уговорить помочь.
-
-Планарная Привязка,
-Ограниченная
-
-Колдовство (Призыв) [смотрите текст]
-Уровень: Маг/Чар 5
-Компоненты: В, С
-Время Активации: 10 минут
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Эффект: 1 элементаль или внешний с
-КХП 6 или менее
-Длительность: Мгновенно
-Спасбросок: Воля нейтрализует
-Устойчивость к Магии: Нет и Да;
-смотрите текст
-Заклинатель делает опасную попытку
-заманить существо из другого плана в
-ловушку, которая находится в диапазоне
-заклинания. Призванное существо удерживается в ловушке, пока не согласиться
-исполнить одно задание в обмен на свободу.
-Чтобы сотворить ловушку, необходимо
-использовать заклинание круг волшебства, сфокусированное вовнутрь. Вид
-призываемого существа должен быть
-заранее известен и определен. Если вы
-хотите вызвать кого-то конкретного, вы
-должны произнести во время заклинания
-его собственное имя.
-Существу позволен спасбросок Воли.
-Если он успешен, существо сопротивляется вызову. Если бросок провален,
-существо немедленно попадает в ловушку (в этом случае устойчивость к
-магии не помогает избежать вызова). Затем существо может избежать ловушки
-при успешной проверке устойчивости
-к магии против вашей проверки уровня
-заклинателя, при помощи путешествия
-между измерениями или успешной проверке Обаяния (КС 15+1/2 вашего уровня заклинателя+ваш модификатор Обн).
-Существо может пробовать каждый из
-этих способов 1 раз в день. Если оно
-освобождается, то может бежать или
-атаковать вас. Если наложить на существо предварительно якорь измерений,
-то оно не сможет сбежать при помощи
-планарного путешествия. Вы также можете использовать диаграмму призыва
-(смотрите круг волшебства против зла
-стр. 225), чтобы сделать ловушку более
-надежной.
-Если существо не выбралось из ловушки, вы можете держать его там
-столько, сколько хотите. Вы можете пытаться заставить существо выполнить
-какое-либо задание и предложить ему за
-это награду. Вы делаете встречные проверки Обаяния. МП устанавливает ваш
-бонус к проверке от +0 до +6 в зависимости от сути задания и награды. Если
-существо выигрывает бросок проверки,
-оно отказывается подчиняться вам. Новые предложения, взятки и т.д. можно
-сделать через 24 часа, также как и повторить старые. Все это повторяется,
-пока существо не пообещает служить
-вам, или пока не освободится, или пока
-вы не решите избавиться от него при
-помощи другого заклинания. Существо
-никогда не согласиться на невозможные
-или неразумные задания. Если при проверке Обаяния у вас на кубике выпал 1,
-существо освобождается от уз и может
-бежать или нападать на вас.
-Как только существо выполнило задание, оно должно только сообщить об
-этом, чтобы его немедленно отослали
-домой. Позже существо может искать
-мести. Если вы поставили задачу с не-
-
-определенным окончанием, которое
-невозможно выполнить до конца (например, «жди здесь» или «защищай эту
-область от нападений»), заклинание сохраняет свой эффект максимум 1 день/
-уровень заклинателя, а затем существо
-немедленно получает шанс на освобождение. Учтите, что умное существо
-может попытаться избежать некоторых
-условий.
-Когда вы используете заклинание, которое призывает добрых, водных, воздушных, земных, огненных, хаотичных,
-законных существ, это заклинание считается соответствующего типа. Например,
-ограниченная планарнарная привязка
-считается водным заклинанием, если вы
-призываете элементалей воды.
+  
