--- a/spells/покоробить-нежить.md
+++ b/spells/покоробить-нежить.md
@@ -1,14 +1,15 @@
+# Покоробить Нежить
 
-Покоробить Нежить
+|                      |                             |
+| -------------------- | --------------------------- |
+| Тип                  | Некромантия                 |
+| Уровень              | Маг/Чар 0                   |
+| Компоненты           | В, С                        |
+| Время Активации      | 1 стандартн. действ.        |
+| Диапазон             | Ближний (7,5 м+1,5 м/2 ур.) |
+| Эффект               | Луч                         |
+| Длительность         | Мгновенная                  |
+| Спасбросок           | Нет                         |
+| Устойчивость к Магии | Да                          |
 
-Некромантия
-Уровень: Маг/Чар 0
-Компоненты: В, С
-Время Активации: 1 стандартн. действ.
-Диапазон: Ближний (7,5 м+1,5 м/2 ур.)
-Эффект: Луч
-Длительность: Мгновенная
-Спасбросок: Нет
-Устойчивость к Магии: Да
-Вы выпускаете луч позитивной энергии. Чтобы попасть, вы должны провести стрелковую касательную атаку,
-если луч попал по существу, вы наносите ему 1d6 повреждений.
+ Вы выпускаете луч позитивной энергии. Чтобы попасть, вы должны провести стрелковую касательную атаку, если луч попал по существу, вы наносите ему 1d6 повреждений.
