--- a/spells/поле-антимагии.md
+++ b/spells/поле-антимагии.md
@@ -1,73 +1,16 @@
+# Поле Антимагии
 
-Поле Антимагии
+|                                  |                                                      |
+| -------------------------------- | ---------------------------------------------------- |
+| Тип                              | Защита                                               |
+| Уровень                          | Жр 8, Защита 6, Маг/Чар 6, Магия 6                   |
+| Компоненты                       | В, С, М/БФ                                           |
+| Время Активации                  | 1 стандартн. действ.                                 |
+| Диапазон                         | 3 м                                                  |
+| Зона Поражения                   | Эманация с радиусом 3 м с центром на вас             |
+| Длительность                     | 10 минут/уровень (П)                                 |
+| Спасбросок                       | Нет                                                  | 
+| Устойчивость к Магии             | Смотрите в тексте                                    |
+| Волшебный Материальный Компонент | Щепотка порошкообразного железа или железные опилки. |
 
-Защита
-Уровень: Жр 8, Защита 6, Маг/Чар 6,
-Магия 6
-Компоненты: В, С, М/БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: 3 м
-Зона Поражения: Эманация с радиусом
-3 м с центром на вас
-Длительность: 10 минут/уровень (П)
-Спасбросок: Нет
-Устойчивость к Магии: Смотрите в
-тексте
-
-Невидимый барьер окружает вас и передвигается вместе с вами. Пространство
-в пределах этого барьера непроницаемо
-для большинства магических эффектов,
-включая заклинания, магические способности, и сверхприродные способности.
-Также, оно предотвращает функционирование любых магических предметов или
-заклинаний в пределах его границ.
-Поле антимагии угнетает любое заклинание или магический эффект который используется внутри, сакти-вированных на него, или акти-вированное
-заклинание в области воздействия, но не
-рассеивает его. К примеру, существо, на
-которое наложено заклинание ускорение,
-пока находится внутри поля, не получает
-эффектов от заклинания, но как только
-оно вышло из-под воздействия поля, заклинание продолжает функционировать.
-Время, проведенное внутри поля антимагии, также учитывается, даже когда
-эффекты заклинания угнетены.
-Призванные существа любого типа и
-бестелесная нежить выбрасываются наружу, если они вошли в поле антимагии.
-Они снова возвращаются на свое место,
-лишь тогда когда поле заканчивает свое
-действие. Время, проведенное вне контроля также учитывается в продолжительности заклинания, которое поддерживает существо. Если вы активируете
-поле антимагии на область, которая занята призванными существами и которые
-имеют устойчивость к магии, чтобы их
-выгнать вам необходимо пройти проверку уровня заклинателя (1d20+уровень заклинателя) против существ обладающих
-устойчивостью к магии. (Эффекты мгновенного колдовства, такие как сотворить
-воду, не затрагиваются полем антимагии,
-потому что колдовство само по себе не
-эффект, а только результат.)
-Обыкновенные существа (обычный
-грифон, а не призванный) может войти в
-область заклинания, как и обычные стрелы. Более того, хотя магический меч не
-функционирует в пределах области заклинания, он все равно, остается мечем
-
-(и к тому же превосходным мечем). Заклинание не воздействует на големов и
-прочие механизмы, которые в процессе
-их создания пропитались магией и благодаря этому они помогают себе (если
-только они не были призваны, и в этом
-случае они принимаются как и любые
-другие призванные существа). Нежить,
-внешние и элементали также не поддаются влиянию поля, за исключением
-призванных существ. Их магические
-и сверхприродные способности могут
-временно аннулироваться полем.
-Рассеивание магии не устраняет
-поле. Два или более полей антимагии,
-которые налаживаются на одно и то
-же пространство не имеют никакого
-эффекта друг на друга. Определенные
-заклинания, такие как стена силы, призматическая сфера, и призматическая
-стена остаются не затронутыми полем
-антимагии (смотрите индивидуальное
-описание заклинаний). Артефакты и
-существа в статусе бога не затрагиваются смертной магией, такой как эта.
-(Для дополнительной информации по
-артефактам смотрите Руководство Мастера Подземелий).
-Если существо больше чем зона ограниченная барьером, и любая из частей
-тела выходящая за его границы, не находится под эффектом поля.
-Волшебный Материальный Компонент: Щепотка порошкообразного железа или железные опилки.
+ Невидимый барьер окружает вас и передвигается вместе с вами. Пространство в пределах этого барьера непроницаемо для большинства магических эффектов, включая заклинания, магические способности, и сверхприродные способности. Также, оно предотвращает функционирование любых магических предметов или заклинаний в пределах его границ. Поле антимагии угнетает любое заклинание или магический эффект который используется внутри, сакти-вированных на него, или акти-вированное заклинание в области воздействия, но не рассеивает его. К примеру, существо, на которое наложено заклинание ускорение, пока находится внутри поля, не получает эффектов от заклинания, но как только оно вышло из-под воздействия поля, заклинание продолжает функционировать. Время, проведенное внутри поля антимагии, также учитывается, даже когда эффекты заклинания угнетены. Призванные существа любого типа и бестелесная нежить выбрасываются наружу, если они вошли в поле антимагии. Они снова возвращаются на свое место, лишь тогда когда поле заканчивает свое действие. Время, проведенное вне контроля также учитывается в продолжительности заклинания, которое поддерживает существо. Если вы активируете поле антимагии на область, которая занята призванными существами и которые имеют устойчивость к магии, чтобы их выгнать вам необходимо пройти проверку уровня заклинателя (1d20+уровень заклинателя) против существ обладающих устойчивостью к магии. (Эффекты мгновенного колдовства, такие как сотворить воду, не затрагиваются полем антимагии, потому что колдовство само по себе не эффект, а только результат.) Обыкновенные существа (обычный грифон, а не призванный) может войти в область заклинания, как и обычные стрелы. Более того, хотя магический меч не функционирует в пределах области заклинания, он все равно, остается мечем  (и к тому же превосходным мечем). Заклинание не воздействует на големов и прочие механизмы, которые в процессе их создания пропитались магией и благодаря этому они помогают себе (если только они не были призваны, и в этом случае они принимаются как и любые другие призванные существа). Нежить, внешние и элементали также не поддаются влиянию поля, за исключением призванных существ. Их магические и сверхприродные способности могут временно аннулироваться полем. Рассеивание магии не устраняет поле. Два или более полей антимагии, которые налаживаются на одно и то же пространство не имеют никакого эффекта друг на друга. Определенные заклинания, такие как стена силы, призматическая сфера, и призматическая стена остаются не затронутыми полем антимагии (смотрите индивидуальное описание заклинаний). Артефакты и существа в статусе бога не затрагиваются смертной магией, такой как эта. (Для дополнительной информации по артефактам смотрите Руководство Мастера Подземелий). Если существо больше чем зона ограниченная барьером, и любая из частей тела выходящая за его границы, не находится под эффектом поля. 
