--- a/spells/полиморф.md
+++ b/spells/полиморф.md
@@ -1,65 +1,22 @@
+# Полиморф
 
-Полиморф
+|                 |                              |
+| --------------- | ---------------------------- |
+| Тип             | Превращение                  |
+| Уровень         | Маг/Чар 4                    |
+| Компоненты      | В, С, М                      |
+| Время Активации | 1 стандартн. действ.         |
+| Диапазон        | Касание                      |
+| Цель            | Не сопротивляющееся касаемое |
 
-Превращение
-Уровень: Маг/Чар 4
-Компоненты: В, С, М
-Время Активации: 1 стандартн. действ.
-Диапазон: Касание
-Цель: Не сопротивляющееся касаемое
-живое существо
-Длительность: 1 мин./уровень (П)
-Спасбросок: Нет
-Устойчивость к Магии: Нет
+живое существо Длительность: 1 мин./уровень (П) Спасбросок: Нет Устойчивость к Магии: Нет Материальный Компонент: Пустой кокон  Заклинание работает как собственное изменение, но вы можете менять согласного на это субъекта на другую форму живого существа. Новая форма может быть того же вида, что и субъект, или любого другого из ниже перечисленных типов существ: необычный, животное, дракон, фея, великан, гуманоид, магический зверь, ужасный гуманоид, слизь, растение или насекомое. Принятая форма не может иметь больше КХП, чем ваш уровень заклинателя (или КХП субъекта – какой из них ниже) до максимума 15 КХП на 15-м уровне. Вы не можете придать субъекту форму меньше, чем Мелкий, а также форму бестелесного или газообразного существа. Вид или подвид избранного существа можно уточнить в Справочнике Монстров. После превращения субъект восстанавливает потерянные хит-поинты, как если бы он отдыхал целую ночь (хотя это не восстанавливает временную потерю параметров и не дает других преимуществ отдыха, а обратное превращение больше не излечивает субъекта). Если существо убито, оно принимает свою истинную форму, но все же остается мертвым. Субъект получает показатели Силы, Ловкости и Тела новой формы, но сохраняет свои собственные показатели Интеллекта, Мудрости и Обаяния. Он также получает все экстраординарные специфические атаки новой формы (удушение, улучшенный захват, яд), но не получает экстраординарные специальные качества новой формы (слепое зрение, быстрое залечивание, регенерация и острый нюх), или другие сверхприродные или магические способности. Бестелесные или газообразные сущест-ва иммунные к полиморфу. Существа, которые могут менять свою форму (ликантропы или доппельгангеры) могут принимать свою природную форму стандартным действием.  
 
-Заклинание работает как собственное
-изменение, но вы можете менять согласного на это субъекта на другую форму
-живого существа. Новая форма может
-быть того же вида, что и субъект, или
-любого другого из ниже перечисленных
-типов существ: необычный, животное,
-дракон, фея, великан, гуманоид, магический зверь, ужасный гуманоид, слизь,
-растение или насекомое. Принятая форма не может иметь больше КХП, чем ваш
-уровень заклинателя (или КХП субъекта
-– какой из них ниже) до максимума 15
-КХП на 15-м уровне. Вы не можете придать субъекту форму меньше, чем Мелкий, а также форму бестелесного или
-газообразного существа. Вид или подвид
-избранного существа можно уточнить в
-Справочнике Монстров.
-После превращения субъект восстанавливает потерянные хит-поинты, как если
-бы он отдыхал целую ночь (хотя это не
-восстанавливает временную потерю параметров и не дает других преимуществ
-отдыха, а обратное превращение больше
-не излечивает субъекта). Если существо
-убито, оно принимает свою истинную
-форму, но все же остается мертвым.
-Субъект получает показатели Силы,
-Ловкости и Тела новой формы, но сохраняет свои собственные показатели Интеллекта, Мудрости и Обаяния. Он также
-получает все экстраординарные специфические атаки новой формы (удушение,
-улучшенный захват, яд), но не получает
-экстраординарные специальные качества
-новой формы (слепое зрение, быстрое залечивание, регенерация и острый нюх),
-или другие сверхприродные или магические способности.
-Бестелесные или газообразные сущест-ва иммунные к полиморфу. Существа, которые могут менять свою форму
-(ликантропы или доппельгангеры) могут
-
-Длительность Примеры
-20 минут
-1 час
-3 часа
-12 часов
-2 дня
-1 неделя
-Постоянно
-
-Камень в человека
-Куклу в человека
-Человека в куклу
-Ящерицу в мантикору
-Овцу в шерстяной камзол
-Землеройку в мантикору
-Мантикору в землеройку
-
-принимать свою природную форму стандартным действием.
-Материальный Компонент: Пустой
-кокон
+| Фактор длительности | Длительность | Примеры                 |
+| ------------------- | ------------ | ----------------------- |
+| 0                   | 20 минут     | Камень в человека       |
+| 2                   | 1 час        | Куклу в человека        |
+| 4                   | 3 часа       | Человека в куклу        |
+| 5                   | 12 часов     | Ящерицу в мантикору     |
+| 6                   | 2 дня        | Овцу в шерстяной камзол |
+| 7                   | 1 неделя     | Землеройку в мантикору  |
+| 9+                  | Постоянно    | Мантикору в землеройку  |
