--- a/spells/очаровать-чудовище.md
+++ b/spells/очаровать-чудовище.md
@@ -1,13 +1,10 @@
+# Очаровать Чудовище
 
-Очаровать Чудовище
+|              |                                                 |
+| ------------ | ----------------------------------------------- |
+| Тип          | Очарование (Очарование) [Воздействует на разум] |
+| Уровень      | Брд 1, Чар/Маг 1                                |
+| Цель         | Одно живое существо                             |
+| Длительность | 1 день/уровень                                  |
 
-Очарование (Очарование) [Воздействует
-на разум]
-Уровень: Брд 1, Чар/Маг 1
-Цель: Одно живое существо
-Длительность: 1 день/уровень
-
-Это заклинание действует аналогично
-заклинанию очаровать персону за тем
-лишь исключением, что действие эффектов заклинания не зависит от типа и
-размеров существа.
+ Это заклинание действует аналогично заклинанию очаровать персону за тем лишь исключением, что действие эффектов заклинания не зависит от типа и размеров существа.
