--- a/spells/плоть-в-камень.md
+++ b/spells/плоть-в-камень.md
@@ -1,22 +1,16 @@
+# Плоть в Камень
 
-Плоть в Камень
+|                        |                            |
+| ---------------------- | -------------------------- |
+| Тип                    | Превращение                |
+| Уровень                | Маг/Чар 6                  |
+| Компоненты             | В, С, М                    |
+| Время Активации        | 1 стандартн. действ.       |
+| Диапазон               | Средний (30 м+3 м/уровень) |
+| Цель                   | Одно существо              |
+| Длительность           | Мгновенно                  |
+| Спасбросок             | Стойкость нейтрализует     |
+| Устойчивость к Магии   | Да                         |
+| Материальный Компонент | Известь, вода и земля.     |
 
-Превращение
-Уровень: Маг/Чар 6
-Компоненты: В, С, М
-
-Время Активации: 1 стандартн. действ.
-Диапазон: Средний (30 м+3 м/уровень)
-Цель: Одно существо
-Длительность: Мгновенно
-Спасбросок: Стойкость нейтрализует
-Устойчивость к Магии: Да
-Субъект со всем своим имуществом
-превращается в неактивную, не имеющую разума статую. Если образовавшаяся в результате этого заклинания статуя
-разбита или повреждена, субъект (если
-когда-либо возвращен в исходное состояние) переносит такие же повреждения
-или деформацию. Существо не является
-умершим, но его нельзя увидеть живым
-с помощью таких заклинаний как смертовзгляд. Этим заклинанием можно поразить только существ с плотью.
-Материальный Компонент: Известь,
-вода и земля.
+ Субъект со всем своим имуществом превращается в неактивную, не имеющую разума статую. Если образовавшаяся в результате этого заклинания статуя разбита или повреждена, субъект (если когда-либо возвращен в исходное состояние) переносит такие же повреждения или деформацию. Существо не является умершим, но его нельзя увидеть живым с помощью таких заклинаний как смертовзгляд. Этим заклинанием можно поразить только существ с плотью. 
