--- a/spells/погибель.md
+++ b/spells/погибель.md
@@ -1,14 +1,15 @@
+# Погибель
 
-Погибель
+|                      |                                      |
+| -------------------- | ------------------------------------ |
+| Тип                  | Некромантия [Влияет на Разум, Страх] |
+| Уровень              | Жр 1                                 |
+| Компоненты           | В, С, БФ                             |
+| Время Активации      | 1 стандартн. действ.                 |
+| Диапазон             | Средний (30 м+3 м/ур.)               |
+| Цель                 | Одно живое существо                  |
+| Длительность         | 1 мин/уровень                        | 
+| Спасбросок           | Воля нейтрализует                    |
+| Устойчивость к Магии | Да                                   |
 
-Некромантия [Влияет на Разум, Страх]
-Уровень: Жр 1
-Компоненты: В, С, БФ
-Время Активации: 1 стандартн. действ.
-Диапазон: Средний (30 м+3 м/ур.)
-Цель: Одно живое существо
-Длительность: 1 мин/уровень
-Спасбросок: Воля нейтрализует
-Устойчивость к Магии: Да
-Это заклинание наполняет одного субъекта столь сильным ощущением ужасного проклятия, что заставляет его,
-остановится в шоке.
+ Это заклинание наполняет одного субъекта столь сильным ощущением ужасного проклятия, что заставляет его, остановится в шоке.
